force-app/main/default/objects/OpportunityLineItem/fields/Accessory__c.field-meta.xml
<CustomField>
    <fullName>Accessory__c</fullName>
    <formula>if( text( PricebookEntry.Product2.Family )= &apos;IFP&apos;  
|| text( PricebookEntry.Product2.Family )= &apos;LCD&apos; 
|| text( PricebookEntry.Product2.Family )= &apos;Monitor&apos; 
|| text( PricebookEntry.Product2.Family )= &apos;Cloud&apos; 
|| text( PricebookEntry.Product2.Family )= &apos;PJ&apos; 
|| text( PricebookEntry.Product2.Family )= &apos;DS&apos; ,false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accessory</label>
    <type>Checkbox</type>
</CustomField>