force-app/main/default/objects/OpportunityLineItem/fields/Chatter_Post__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Post__c</fullName>
    <formula>if(isblank( Approved_Price__c )   ,&apos;Product Added to Spa: &apos;&amp; Product__c, 
if( Approved_Price__c =0  ,&apos;Product Added to Spa: &apos;&amp; Product__c, 


&apos;Approved Price change for &apos;&amp; Product__c&amp; &apos; To: &apos;&amp; text(Approved_Price__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Info for chatter post when product added or approval price changes</inlineHelpText>
    <label>Chatter Post</label>
    <type>Text</type>
</CustomField>