force-app/main/default/objects/OpportunityLineItem/fields/Competitive_Info__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Info__c</fullName>
    <formula>text(Competitor_Name_del__c)  &amp;&quot; &quot; &amp; Competitor_SKU__c &amp;&quot; &quot; &amp; text(Competitor_Price_del__c)</formula>
    <label>Competitive Info</label>
    <type>Text</type>
</CustomField>