force-app/main/default/objects/OpportunityLineItem/fields/Competitor_Name_del__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name_del__c</fullName>
    <label>Competitor Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acer</fullName>
            </value>
            <value>
                <fullName>Asus</fullName>
            </value>
            <value>
                <fullName>BenQ</fullName>
            </value>
            <value>
                <fullName>Boxlight</fullName>
            </value>
            <value>
                <fullName>ClearTouch</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Epson</fullName>
            </value>
            <value>
                <fullName>Hitachi</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>InFocus</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>NEC</fullName>
            </value>
            <value>
                <fullName>Optoma</fullName>
            </value>
            <value>
                <fullName>Panasonic</fullName>
            </value>
            <value>
                <fullName>Planar</fullName>
            </value>
            <value>
                <fullName>Recordex</fullName>
            </value>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>Sharp</fullName>
            </value>
            <value>
                <fullName>Smart</fullName>
            </value>
            <value>
                <fullName>Vivitek</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>