force-app/main/default/objects/OpportunityLineItem/fields/Competitor_Price_del__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Price_del__c</fullName>
    <label>Competitor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>