force-app/main/default/objects/OpportunityLineItem/fields/Competitor_SKU__c.field-meta.xml
<CustomField>
    <fullName>Competitor_SKU__c</fullName>
    <label>Competitor SKU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>