force-app/main/default/objects/OpportunityLineItem/fields/Delete_Check__c.field-meta.xml
<CustomField>
    <fullName>Delete_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Check</label>
    <type>Checkbox</type>
</CustomField>