force-app/main/default/objects/OpportunityLineItem/fields/Disti_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Disti_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disti Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>