force-app/main/default/objects/OpportunityLineItem/fields/Eval_Request__c.field-meta.xml
<CustomField>
    <fullName>Eval_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eval Request</label>
    <referenceTo>Eval_Request__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>