force-app/main/default/objects/OpportunityLineItem/fields/Evaluation_Product__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product if checked will be added to the eval when created</description>
    <label>Evaluation Product</label>
    <type>Checkbox</type>
</CustomField>