force-app/main/default/objects/OpportunityLineItem/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <formula>Text(PricebookEntry.Product2.Family)</formula>
    <label>Family</label>
    <type>Text</type>
</CustomField>