force-app/main/default/objects/OpportunityLineItem/fields/Flow_Add_Product_to_Opp_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Add_Product_to_Opp_Name__c</fullName>
    <formula>if( Opportunity.SPA_Products__c = 0, true,false)</formula>
    <label>Flow Add Product to Opp Name</label>
    <type>Checkbox</type>
</CustomField>