force-app/main/default/objects/OpportunityLineItem/fields/Flow_Suppression__c.field-meta.xml
<CustomField>
    <fullName>Flow_Suppression__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Suppresses flow at admins need. Used especially when importing through data loader.</inlineHelpText>
    <label>Flow Suppression</label>
    <type>Checkbox</type>
</CustomField>