force-app/main/default/objects/OpportunityLineItem/fields/IsSyncFromQuote__c.field-meta.xml
<CustomField>
    <fullName>IsSyncFromQuote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSyncFromQuote</label>
    <type>Checkbox</type>
</CustomField>