force-app/main/default/objects/OpportunityLineItem/fields/Landing_Cost2__c.field-meta.xml
<CustomField>
    <fullName>Landing_Cost2__c</fullName>
    <label>Landed Cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>