force-app/main/default/objects/OpportunityLineItem/fields/Likely_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Likely_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Likely Purchase</label>
    <type>Checkbox</type>
</CustomField>