force-app/main/default/objects/OpportunityLineItem/fields/Line_Additional_Terms__c.field-meta.xml
<CustomField>
    <fullName>Line_Additional_Terms__c</fullName>
    <label>Line Additional Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>