force-app/main/default/objects/OpportunityLineItem/fields/List_Price_Request_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Request_Price__c</fullName>
    <formula>if(contains(text(ListPrice),&quot;.&quot;),text(ListPrice),text(ListPrice)&amp;&quot;.00&quot;)&amp;&quot;/&quot;&amp;if(contains(text(UnitPrice),&quot;.&quot;),text(UnitPrice),text(UnitPrice)&amp;&quot;.00&quot;)</formula>
    <label>List Price/Requested Price</label>
    <type>Text</type>
</CustomField>