force-app/main/default/objects/OpportunityLineItem/fields/Manager_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Manager_Current_User__c</fullName>
    <formula>if( Opportunity.Owner.Manager.FirstName &amp; &apos; &apos;&amp;Opportunity.Owner.Manager.LastName =  $User.FirstName &amp;&apos; &apos;&amp;$User.LastName, true, 
if( Opportunity.Owner.Manager.Manager.FirstName &amp; &apos; &apos;&amp;Opportunity.Owner.Manager.Manager.LastName =  $User.FirstName &amp;&apos; &apos;&amp;$User.LastName, true,
if( Opportunity.Owner.Manager.Manager.Manager.FirstName &amp; &apos; &apos;&amp;Opportunity.Owner.Manager.Manager.Manager.LastName =  $User.FirstName &amp;&apos; &apos;&amp;$User.LastName, true,
false)))</formula>
    <label>Manager = Current User</label>
    <type>Checkbox</type>
</CustomField>