force-app/main/default/objects/OpportunityLineItem/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <formula>if(Approved_Price__c = 0,
((UnitPrice  -  Landed_Cost__c )/UnitPrice),
((Approved_Price__c -  PricebookEntry.Total_Cost__c   )/Approved_Price__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>