force-app/main/default/objects/OpportunityLineItem/fields/marginchecktest__c.field-meta.xml
<CustomField>
    <fullName>marginchecktest__c</fullName>
    <description>text(find( &apos;.&apos;,text(Margin__c), 2))</description>
    <formula>if(len(text(round((Margin__c*100),2)))= 4,
 text(round((Margin__c*100),2))&amp;&apos;0%&apos;,


if( len(text(round((Margin__c*100),2)))= 2,
 text(round((Margin__c*100),2))&amp;&apos;.00%&apos;,

 
 text(round((Margin__c*100),2))&amp;&apos;%&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>marginchecktest</label>
    <type>Text</type>
</CustomField>