force-app/main/default/objects/OpportunityLineItem/fields/MarginText__c.field-meta.xml
<CustomField>
    <fullName>MarginText__c</fullName>
    <label>Margin</label>
    <length>25</length>
    <type>Text</type>
</CustomField>