force-app/main/default/objects/OpportunityLineItem/fields/MarginUpdate__c.field-meta.xml
<CustomField>
    <fullName>MarginUpdate__c</fullName>
    <description>0,
&apos;0.00%&apos; !=  MarginText__c,
if(Margin__c&lt; 0 ,
text(round(Margin__c*10000,0)/100)&amp;&apos;.00%&apos; !=  MarginText__c,


if(
text(round(Margin__c*10000,0)/100)&amp;&apos;%&apos; !=  MarginText__c))</description>
    <formula>MarginText__c != marginchecktest__c
&amp;&amp; text(round((Margin__c*100),2))&amp;&apos;%&apos; != MarginText__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MarginUpdate</label>
    <type>Checkbox</type>
</CustomField>