force-app/main/default/objects/OpportunityLineItem/fields/opp_name__c.field-meta.xml
<CustomField>
    <fullName>opp_name__c</fullName>
    <formula>if( Opportunity.Old_Spa_ID__c &lt;&gt; null, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Name</label>
    <type>Checkbox</type>
</CustomField>