force-app/main/default/objects/OpportunityLineItem/fields/Original_Request_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_Request_Sales_Price__c</fullName>
    <label>Original Request Sales Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>