force-app/main/default/objects/OpportunityLineItem/fields/PB_and_Landed_Cost__c.field-meta.xml
<CustomField>
    <fullName>PB_and_Landed_Cost__c</fullName>
    <formula>Opportunity.Pricebook2.Name &amp;&apos; $&apos;&amp;
if( CONTAINS(&apos;.&apos;, text(Landing_Cost2__c)) ,text(Landing_Cost2__c),text(Landing_Cost2__c)&amp;&apos;.00&apos;)</formula>
    <label>PB and Landed Cost</label>
    <type>Text</type>
</CustomField>