force-app/main/default/objects/OpportunityLineItem/fields/Percent_Discount__c.field-meta.xml
<CustomField>
    <fullName>Percent_Discount__c</fullName>
    <formula>( ListPrice -  UnitPrice) / ListPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Discount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>