force-app/main/default/objects/OpportunityLineItem/fields/Price_Alert__c.field-meta.xml
<CustomField>
    <fullName>Price_Alert__c</fullName>
    <formula>(ListPrice- Approved_Price__c  )/ListPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Alert</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>