force-app/main/default/objects/OpportunityLineItem/fields/Price_History__c.field-meta.xml
<CustomField>
    <fullName>Price_History__c</fullName>
    <formula>HYPERLINK(&quot;/00O12000005zNxi?pv1=&quot;&amp;SPA_Product_SKU__c,   SPA_Product_SKU__c  &amp;&quot; Price History&quot; )</formula>
    <label>Price History</label>
    <type>Text</type>
</CustomField>