force-app/main/default/objects/OpportunityLineItem/fields/Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Pricebook__c</fullName>
    <formula>Opportunity.Pricebook2Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook</label>
    <type>Text</type>
</CustomField>