force-app/main/default/objects/OpportunityLineItem/fields/Product_Descritption__c.field-meta.xml
<CustomField>
    <fullName>Product_Descritption__c</fullName>
    <label>Product Descritption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>