force-app/main/default/objects/OpportunityLineItem/fields/Product_Historical_Data__c.field-meta.xml
<CustomField>
    <fullName>Product_Historical_Data__c</fullName>
    <formula>SPA_Product_SKU__c &amp;&quot;    &quot;&amp;HYPERLINK(&quot;/00O12000005zNxi?pv1=&quot;&amp;SPA_Product_SKU__c, &quot; Price History&quot; )</formula>
    <label>Product &amp; Historical Data</label>
    <type>Text</type>
</CustomField>