force-app/main/default/objects/OpportunityLineItem/fields/Product_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Product_Pillar__c</fullName>
    <label>Product Pillar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>