force-app/main/default/objects/OpportunityLineItem/fields/Product_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Unit_Price__c</fullName>
    <formula>PricebookEntry.UnitPrice</formula>
    <label>Product Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>