force-app/main/default/objects/OpportunityLineItem/fields/Requester_Phone__c.field-meta.xml
<CustomField>
    <fullName>Requester_Phone__c</fullName>
    <label>Requester Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>