force-app/main/default/objects/OpportunityLineItem/fields/Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Email__c</fullName>
    <label>Requestor Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>