force-app/main/default/objects/OpportunityLineItem/fields/SchdLastUpdated__c.field-meta.xml
<CustomField>
    <fullName>SchdLastUpdated__c</fullName>
    <formula>if(isblank(SchdUpdated__c ), DATEVALUE (CreatedDate),SchdUpdated__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SchdLastUpdated</label>
    <type>Date</type>
</CustomField>