force-app/main/default/objects/OpportunityLineItem/fields/SchdUpdated__c.field-meta.xml
<CustomField>
    <fullName>SchdUpdated__c</fullName>
    <label>SchdUpdated</label>
    <type>Date</type>
</CustomField>