force-app/main/default/objects/OpportunityLineItem/fields/Ship_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Out_Date__c</fullName>
    <label>Ship Out Date</label>
    <type>Date</type>
</CustomField>