force-app/main/default/objects/OpportunityLineItem/fields/SPA_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>SPA_Approval_Date__c</fullName>
    <label>SPA Approval Date</label>
    <type>Date</type>
</CustomField>