force-app/main/default/objects/OpportunityLineItem/fields/Spa_ID__c.field-meta.xml
<CustomField>
    <fullName>Spa_ID__c</fullName>
    <description>Used for informatica task that matches spa price with spa  claim</description>
    <formula>Opportunity.SPA_ID__c</formula>
    <label>Spa ID</label>
    <type>Text</type>
</CustomField>