force-app/main/default/objects/OpportunityLineItem/fields/SPA_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>SPA_Line_ID__c</fullName>
    <label>SPA Line ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>