force-app/main/default/objects/OpportunityLineItem/fields/SPA_List_Price__c.field-meta.xml
<CustomField>
    <fullName>SPA_List_Price__c</fullName>
    <description>Snapshot of SPA list price at time of SPA creation</description>
    <inlineHelpText>Snapshot of SPA list price at time of SPA creation</inlineHelpText>
    <label>SPA List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>