force-app/main/default/objects/OpportunityLineItem/fields/SPA_Status__c.field-meta.xml
<CustomField>
    <fullName>SPA_Status__c</fullName>
    <label>SPA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>