force-app/main/default/objects/OpportunityLineItem/fields/SPA_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>SPA_Total_Amount__c</fullName>
    <formula>if (Approved_Price__c &lt;0 ,  UnitPrice * Quantity ,Approved_Price__c *  Quantity )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPA Total Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>