force-app/main/default/objects/OpportunityLineItem/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <defaultValue>&quot;Price may be revised monthly (up or down), at ViewSonic&apos;s discretion.Stock subject to availability at the time of receipt of purchase order by ViewSonic Corp.Replacement products (and spec) must be quoted at time of release by ViewSonic Corp.Standard freight and credit terms apply ndard warranty applies.Purchase record to be audited by ViewSonic Corp prior to price adjustment credit memo being issued. Credit memo claims must be submitted within 30 working days of each shipment in order for claim to be processed.All dash revisions of the unit/s listed above for special pricing are applicable under this SPA.&quot;</defaultValue>
    <label>Terms and Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>