force-app/main/default/objects/OpportunityLineItem/fields/test_list_price__c.field-meta.xml
<CustomField>
    <fullName>test_list_price__c</fullName>
    <formula>if(contains(text(ListPrice),&quot;.&quot;),text(ListPrice),text(ListPrice)&amp;&quot;.00&quot;)&amp;&quot;/&quot;&amp;if(contains(text(ListPrice),&quot;.&quot;),text(ListPrice),text(ListPrice)&amp;&quot;.00&quot;)</formula>
    <label>test list price</label>
    <type>Text</type>
</CustomField>