force-app/main/default/objects/OpportunityLineItem/fields/transfer__c.field-meta.xml
<CustomField>
    <fullName>transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TransferUpdate</label>
    <type>Checkbox</type>
</CustomField>