force-app/main/default/objects/OpportunityLineItem/fields/Z_Apex_Test__c.field-meta.xml
<CustomField>
    <fullName>Z_Apex_Test__c</fullName>
    <label>Z Apex Test</label>
    <length>200</length>
    <type>Text</type>
</CustomField>