force-app/main/default/objects/OpportunityLineItem/validationRules/Cannot_Edit_Approved_Products.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Approved_Products</fullName>
    <active>false</active>
    <errorConditionFormula>$User.Alias  != &quot;admin&quot; &amp;&amp; $User.Alias  != &quot;pmark&quot;  &amp;&amp; $User.Alias  != &quot;swang&quot;     &amp;&amp; $User.Alias  != &quot;BidDesk&quot; &amp;&amp;  not(isblank(Approved_Price__c ))</errorConditionFormula>
    <errorMessage>You cannot change any product line information after spa approval. You must use Spa Resubmission Note</errorMessage>
</ValidationRule>