force-app/main/default/objects/OpportunityLineItem/validationRules/SpecialWarranty.validationRule-meta.xml
<ValidationRule>
    <fullName>SpecialWarranty</fullName>
    <active>true</active>
    <errorConditionFormula>Product2.SpecialExtWarranty__c &amp;&amp;  (Opportunity.Account.BillingCountry == &apos;Argentina&apos; ||
Opportunity.Account.BillingCountry == &apos;Brazil&apos;)</errorConditionFormula>
    <errorMessage>Extended Warranties cannot be used in Argentina or Brazil</errorMessage>
</ValidationRule>